--- a/Queens_8/Queens_8.csproj
+++ b/Queens_8/Queens_8.csproj
@@ -39,6 +39,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Board.cs" />
+        <Compile Include="ManualTesting.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Queen.cs" />
