--- a/Queens_8/Queens_8.csproj
+++ b/Queens_8/Queens_8.csproj
@@ -40,6 +40,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Board.cs" />
+        <Compile Include="BruteForceTest.cs" />
         <Compile Include="ManualTesting.cs" />
         <Compile Include="Pieces\Queen.cs" />
         <Compile Include="Program.cs" />
