--- a/Queens_8/Queens_8.csproj
+++ b/Queens_8/Queens_8.csproj
@@ -42,6 +42,7 @@
         <Compile Include="Board.cs" />
         <Compile Include="BruteForceTest.cs" />
         <Compile Include="ManualTesting.cs" />
+        <Compile Include="Pieces\Pawn.cs" />
         <Compile Include="Pieces\Queen.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
